# unity-unite-translator

./: .gitignore  .python-version  README.md  USAGE.md  pyproject.toml
python/: parser.py
src/unity_unite_translator/: __init__.py  applier.py  csv-translator.cs  encrypt_csv.py  integrator.py  parser-old-1.py  parser.py  parser2.py  parser3.py  translator.py
